--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 <li><a href="https://youtu.be/ARnlm2_-Tzw" class="YT"></a><b>Balzac</b> - <i>Evil Legend Thirteen</i><span class="rating">3/5</span><span class="genre">punk</span></li>
 <li><a href="https://youtu.be/k2U2-Wn9G1M" class="YT"></a><b>Sammale</b> - <i>Ikiharmaja</i><span class="rating">3/5</span><span class="genre">atmospheric black</span></li>
 <li><a href="https://youtu.be/Q9eIGFvphWc" class="YT"></a><b>Opia</b> - <i>I Welcome Thee, Eternal Sleep</i><span class="rating">3/5</span><span class="genre">doom/gothic</span></li>
+<li><a href="https://youtu.be/zJmeL_i9BBQ" class="YT"></a><b>Oledickfoggy</b> - <i>ビューティフルデイズ</i><span class="rating">3/5</span><span class="genre">j-rock/j-pop</span></li>
 <li><a href="https://youtu.be/xlc1kPcmGqw" class="YT"></a><b>Drouth</b> - <i>The Teeth of Time</i><span class="rating">3/5</span><span class="genre">black</span></li>
 <li><a href="https://youtu.be/05uCF3kqav4" class="YT"></a><b>Karg</b> - <i>Marodeur</i><span class="rating">3/5</span><span class="genre">post-black</span></li>
 <li><a href="https://youtu.be/IjdycGO8GLw" class="YT"></a><b>Final Dose</b> - <i>Under The Eternal Shadow</i><span class="rating">3/5</span><span class="genre">black/punk</span></li>
@@ -233,6 +234,7 @@
 <li><a href="https://youtu.be/v0eaKqFaOys" class="YT"></a><b>Teitanblood</b> - <i>From The Visceral Abyss</i><span class="rating">3/5</span><span class="genre">war/death</span></li>
 <li><a href="https://youtu.be/UtQarqIcBFM" class="YT"></a><b>Hartlight</b> - <i>The Triumph of Metal</i><span class="rating">3/5</span><span class="genre">symphonic/progressive</span></li>
 <li><a href="https://youtu.be/dPtXXt582FU" class="YT"></a><b>Trold</b> - <i>I Skovens Rige</i><span class="rating">3/5</span><span class="genre">folk</span></li>
+<li><a href="https://youtu.be/MCu_U2CCCgQ" class="YT"></a><b>NyreDolk</b> - <i>Barndommens hjem</i><span class="rating">3/5</span><span class="genre">black/punk</span></li>
 <li><a href="https://youtu.be/1PaeZ2Y_BPU" class="YT"></a><b>Nik Nocturnal</b> - <i>The Lost Chapters [EP]</i><span class="rating">3/5</span><span class="genre">metalcore</span></li>
 <li><a href="https://youtu.be/ZHzWX_J6jNo" class="YT"></a><b>Elvenking</b> - <i>Reader Of The Runes: Luna</i><span class="rating">3/5</span><span class="genre">folk/power</span></li>
 <li><a href="https://youtu.be/X20BfVoqlN0" class="YT"></a><b>Hate Within</b> - <i>Tomb of the Tormentor</i><span class="rating">3/5</span><span class="genre">symphonic deathcore</span></li>
@@ -301,6 +303,7 @@
 <li><a href="https://youtu.be/aYX2vGAEFwU" class="YT"></a><b>Cult Of Fire</b> - <i>The One, Who Is Made Of Smoke</i><span class="rating">2/5</span><span class="genre">melodic black</span></li>
 <li><a href="https://youtu.be/BOxutnufHrI" class="YT"></a><b>Jade</b> - <i>Mysteries of a Flowery Dream</i><span class="rating">2/5</span><span class="genre">death/doom</span></li>
 <li><a href="https://youtu.be/qmdt2f7f-AQ" class="YT"></a><b>Aoyama Sachiko</b> - <i>かがやきの虜</i><span class="rating">2/5</span><span class="genre">j-pop</span></li>
+<li><a href="https://youtu.be/r90cV290Usk" class="YT"></a><b>Frogg</b> - <i>Eclipse</i><span class="rating">2/5</span><span class="genre">progressive/tech death</span></li>
 <li><a href="https://youtu.be/w2yWq9DGRlY" class="YT"></a><b>Aran Angmar</b> - <i>Ordo Diabolicum</i><span class="rating">2/5</span><span class="genre">melodic black</span></li>
 <li><a href="https://youtu.be/o53F6urbwnQ" class="YT"></a><b>Tómarúm</b> - <i>Beyond Obsidian Euphoria</i><span class="rating">2/5</span><span class="genre">tech death/progressive</span></li>
 <li><a href="https://youtu.be/Ca1ZwkWUo-o" class="YT"></a><b>Whitechapel</b> - <i>Hymns In Dissonance</i><span class="rating">2/5</span><span class="genre">deathcore</span></li>
