--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
 <li><a href="https://youtu.be/-9f1G49qDIY" class="YT"></a><b>Aivy</b> - <i>I Know That</i><span class="rating">3/5</span><span class="genre">j-pop/j-rock</span></li>
 <li><a href="https://youtu.be/8ZP5eqm4JqM" class="YT"></a><b>Hoshimachi Suisei</b> - <i>新星目録</i><span class="rating">3/5</span><span class="genre">j-pop</span></li>
 <li><a href="https://youtu.be/BUeLi9KC7ag" class="YT"></a><b>The Birthday Massacre</b> - <i>Pathways</i><span class="rating">3/5</span><span class="genre">darkwave/pop</span></li>
+<li><a href="https://youtu.be/WrU-my3SHao" class="YT"></a><b>Cwfen</b> - <i>Sorrows</i><span class="rating">3/5</span><span class="genre">doom/gothic</span></li>
 <li><a href="https://youtu.be/kIvSDdtvBBY" class="YT"></a><b>Decline of the I</b> - <i>Wilhelm</i><span class="rating">3/5</span><span class="genre">post-black</span></li>
 <li><a href="https://youtu.be/CfmSATg9GuY" class="YT"></a><b>Chaos Control</b> - <i>Lost In Time [EP]</i><span class="rating">3/5</span><span class="genre">power</span></li>
 <li><a href="https://youtu.be/Nyuim0lH_Go" class="YT"></a><b>Sleep Theory</b> - <i>Afterglow</i><span class="rating">3/5</span><span class="genre">alternative</span></li>
@@ -285,6 +286,7 @@
 <li><a href="https://youtu.be/ttKeW8djtOQ" class="YT"></a><b>Ancient Mastery</b> - <i>The Forgotten Realm of Xul'Gothar</i><span class="rating">2/5</span><span class="genre">melodic black</span></li>
 <li><a href="https://youtu.be/ufaCk6-wUuo" class="YT"></a><b>Winselmutter</b> - <i>Schattentod in der Leibeswelt</i><span class="rating">2/5</span><span class="genre">black</span></li>
 <li><a href="https://youtu.be/kekWgv0PwkA" class="YT"></a><b>...And Oceans</b> - <i>The Regeneration Itinerary</i><span class="rating">2/5</span><span class="genre">melodic black</span></li>
+<li><a href="https://youtu.be/-_5aOlpKFJ4" class="YT"></a><b>Rivers Of Nihil</b> - <i>Rivers Of Nihil</i><span class="rating">2/5</span><span class="genre">progressive</span></li>
 <li><a href="https://youtu.be/MOD50EoFqdg" class="YT"></a><b>Epica</b> - <i>Aspiral</i><span class="rating">2/5</span><span class="genre">symphonic</span></li>
 <li><a href="https://youtu.be/kCEFu4ObjEo" class="YT"></a><b>Elderwind</b> - <i>Older Than Ancient</i><span class="rating">2/5</span><span class="genre">atmospheric black</span></li>
 <li><a href="https://youtu.be/8ZuKjL5Nj2o" class="YT"></a><b>The Chamberlain</b> - <i>Draconian Magick</i><span class="rating">2/5</span><span class="genre">black</span></li>
