--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         .album-list li {
             counter-increment: album-counter;
-            border-radius: 10px;
+            border-radius: 16px;
             display: flex;
             align-items: center;
             gap: 4px;
@@ -219,6 +219,7 @@
 <li><a href="https://youtu.be/XuB94zpEptU" class="YT"></a><b>Havukruunu</b> - <i>Tavastland</i><span class="rating">3.5/5</span><span class="genre">melodic black/folk</span></li>
 <li><a href="https://youtu.be/DEpvfaJmwrQ" class="YT"></a><b>Donor</b> - <i>Jeviště snů</i><span class="rating">3.5/5</span><span class="genre">power</span></li>
 <li><a href="https://youtu.be/BnWdqX6_2j0" class="YT"></a><b>Gràb</b> - <i>Kremess</i><span class="rating">3.5/5</span><span class="genre">melodic black</span></li>
+<li><a href="https://youtu.be/UeFtzs6DT6s" class="YT"></a><b>Bloodbark</b> - <i>Sacred Sound of Solitude</i><span class="rating">3.5/5</span><span class="genre">atmospheric black</span></li>
 <li><a href="https://youtu.be/ARnlm2_-Tzw" class="YT"></a><b>Balzac</b> - <i>Evil Legend Thirteen</i><span class="rating">3/5</span><span class="genre">punk</span></li>
 <li><a href="https://youtu.be/k2U2-Wn9G1M" class="YT"></a><b>Sammale</b> - <i>Ikiharmaja</i><span class="rating">3/5</span><span class="genre">atmospheric black</span></li>
 <li><a href="https://youtu.be/Q9eIGFvphWc" class="YT"></a><b>Opia</b> - <i>I Welcome Thee, Eternal Sleep</i><span class="rating">3/5</span><span class="genre">doom/gothic</span></li>
@@ -295,6 +296,7 @@
 <li><a href="https://youtu.be/62wpvzAMruE" class="YT"></a><b>Moonlight Haze</b> - <i>Beyond</i><span class="rating">2/5</span><span class="genre">symphonic</span></li>
 <li><a href="https://youtu.be/x66bZGnwKq0" class="YT"></a><b>Neckbreakker</b> - <i>Within the Viscera</i><span class="rating">2/5</span><span class="genre">death</span></li>
 <li><a href="https://youtu.be/dP08ex8nbKE" class="YT"></a><b>Majestica</b> - <i>Power Train</i><span class="rating">2/5</span><span class="genre">power</span></li>
+<li><a href="https://youtu.be/83Nn9h8yP9c" class="YT"></a><b>Anzv</b> - <i>KUR</i><span class="rating">2/5</span><span class="genre">black/death</span></li>
 <li><a href="https://youtu.be/wL5UpOrHTBY" class="YT"></a><b>The Callous Daoboys</b> - <i>I Don't Want to See You in Heaven</i><span class="rating">2/5</span><span class="genre">alternative</span></li>
 <li><a href="https://youtu.be/KDKWBt0WpyI" class="YT"></a><b>Antropomorphia</b> - <i>Devoid of Light</i><span class="rating">2/5</span><span class="genre">death</span></li>
 <li><a href="https://youtu.be/DLG9oTH-ZbQ" class="YT"></a><b>Ghost</b> - <i>Skeletá</i><span class="rating">2/5</span><span class="genre">rock</span></li>
@@ -305,6 +307,7 @@
 <li><a href="https://youtu.be/aYX2vGAEFwU" class="YT"></a><b>Cult Of Fire</b> - <i>The One, Who Is Made Of Smoke</i><span class="rating">2/5</span><span class="genre">melodic black</span></li>
 <li><a href="https://youtu.be/BOxutnufHrI" class="YT"></a><b>Jade</b> - <i>Mysteries of a Flowery Dream</i><span class="rating">2/5</span><span class="genre">death/doom</span></li>
 <li><a href="https://youtu.be/qmdt2f7f-AQ" class="YT"></a><b>Aoyama Sachiko</b> - <i>かがやきの虜</i><span class="rating">2/5</span><span class="genre">j-pop</span></li>
+<li><a href="https://youtu.be/AnrtXB_rayM" class="YT"></a><b>Häxkapell</b> - <i>Om jordens blod och urgravens grepp</i><span class="rating">2/5</span><span class="genre">black/melodic black</span></li>
 <li><a href="https://youtu.be/r90cV290Usk" class="YT"></a><b>Frogg</b> - <i>Eclipse</i><span class="rating">2/5</span><span class="genre">progressive/tech death</span></li>
 <li><a href="https://youtu.be/w2yWq9DGRlY" class="YT"></a><b>Aran Angmar</b> - <i>Ordo Diabolicum</i><span class="rating">2/5</span><span class="genre">melodic black</span></li>
 <li><a href="https://youtu.be/o53F6urbwnQ" class="YT"></a><b>Tómarúm</b> - <i>Beyond Obsidian Euphoria</i><span class="rating">2/5</span><span class="genre">tech death/progressive</span></li>
