--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 <li><a href="https://youtu.be/WrU-my3SHao" class="YT"></a><b>Cwfen</b> - <i>Sorrows</i><span class="rating">3/5</span><span class="genre">doom/gothic</span></li>
 <li><a href="https://youtu.be/kIvSDdtvBBY" class="YT"></a><b>Decline of the I</b> - <i>Wilhelm</i><span class="rating">3/5</span><span class="genre">post-black</span></li>
 <li><a href="https://youtu.be/CfmSATg9GuY" class="YT"></a><b>Chaos Control</b> - <i>Lost In Time [EP]</i><span class="rating">3/5</span><span class="genre">power</span></li>
+<li><a href="https://youtu.be/vplHxkUIYr8" class="YT"></a><b>Obsidian Tongue</b> - <i>Eclipsing Worlds of Scorn</i><span class="rating">3/5</span><span class="genre">atmospheric black</span></li>
 <li><a href="https://youtu.be/Nyuim0lH_Go" class="YT"></a><b>Sleep Theory</b> - <i>Afterglow</i><span class="rating">3/5</span><span class="genre">alternative</span></li>
 <li><a href="https://youtu.be/hCScIFoNhLg" class="YT"></a><b>Buried Realm</b> - <i>The Dormant Darkness</i><span class="rating">3/5</span><span class="genre">melodic death/tech death</span></li>
 <li><a href="https://youtu.be/70dJJade99s" class="YT"></a><b>Ancient Death</b> - <i>Ego Dissolution</i><span class="rating">3/5</span><span class="genre">death/doom</span></li>
@@ -271,6 +272,7 @@
 <li><a href="https://youtu.be/iKKY8XVOIbI" class="YT"></a><b>Eudaemon</b> - <i>Spiritual Anguish</i><span class="rating">3/5</span><span class="genre">post-black</span></li>
 <li><a href="https://youtu.be/HUtHF8Mf6Cw" class="YT"></a><b>Hate</b> - <i>Bellum Regiis</i><span class="rating">3/5</span><span class="genre">death/black</span></li>
 <li><a href="https://youtu.be/EZoTzp4mTgk&t=1423s" class="YT"></a><b>Eternios</b> - <i>Mysterium</i><span class="rating">3/5</span><span class="genre">melodic death/melodic black</span></li>
+<li><a href="https://youtu.be/ffDDdMwjD8s" class="YT"></a><b>Sunscourge</b> - <i>Veiled Occult Mysticism</i><span class="rating">3/5</span><span class="genre">deathcore</span></li>
 <li><a href="https://youtu.be/AFeBNJZeUjs" class="YT"></a><b>Maud The Moth</b> - <i>The Distaff</i><span class="rating">3/5</span><span class="genre">darkwave</span></li>
 <li><a href="https://youtu.be/vSjZHdhc_2c" class="YT"></a><b>Rothadás</b> - <i>Töviskert...</i><span class="rating">2.5/5</span><span class="genre">death/doom</span></li>
 <li><a href="https://youtu.be/ac-fndbGqrg" class="YT"></a><b>LIK</b> - <i>Necro</i><span class="rating">2.5/5</span><span class="genre">death</span></li>
@@ -331,6 +333,8 @@
 <li><a href="https://youtu.be/zxsyPT9zpW0" class="YT"></a><b>DarkbarD</b> - <i>Blasphemies Vol. 1 [EP]</i><span class="rating">2/5</span><span class="genre">atmospheric black</span></li>
 <li><a href="https://youtu.be/LglfXHM1gH4" class="YT"></a><b>Dawn of Ouroboros</b> - <i>Bioluminescence</i><span class="rating">2/5</span><span class="genre">post-black/progressive</span></li>
 <li><a href="https://youtu.be/qIfnSJl8RmA" class="YT"></a><b>Dynazty</b> - <i>Game of Faces</i><span class="rating">2/5</span><span class="genre">heavy/rock</span></li>
+<li><a href="https://youtu.be/WHFt3PnHB3Q" class="YT"></a><b>Onirik</b> - <i>Curling Serpents Under Stone</i><span class="rating">2/5</span><span class="genre">black</span></li>
+<li><a href="https://youtu.be/SQnYgnmyZxk" class="YT"></a><b>Atlantic</b> - <i>Timeworn</i><span class="rating">2/5</span><span class="genre">atmospheric black</span></li>
 <li><a href="https://youtu.be/6uafM47ppMo" class="YT"></a><b>Wallners</b> - <i>End of Circles</i><span class="rating">2/5</span><span class="genre">dream pop</span></li>
 <li><a href="https://youtu.be/AO2ncxfoxU0" class="YT"></a><b>Sonus Mortis</b> - <i>Synapse The Hivemind</i><span class="rating">2/5</span><span class="genre">melodic death</span></li>
 <li><a href="https://youtu.be/vOvrBbGknhc" class="YT"></a><b>Forlorn</b> - <i>Aether</i><span class="rating">2/5</span><span class="genre">alternative/metalcore</span></li>
@@ -341,13 +345,14 @@
         </ol>
     </div>
     <script defer>
-        let albumData = [];
-        let currentActiveGenreFilter = '';
+        const albumData = [];
+        const activeGenreFilters = new Set();
+        const genreLabelElements = new Map();
 
         const elements = {
-            albumList: null,
-            filterContainer: null,
-            ratingInfoTrigger: null
+            albumList: document.querySelector('.album-list'),
+            filterContainer: document.querySelector('.filter-container'),
+            ratingInfoTrigger: document.getElementById('ratingInfoTrigger')
         };
 
         const genreColors = [
@@ -357,75 +362,66 @@
             '#346086', '#974343', '#17827B', '#9F7D17', '#C04A36', '#668B66'
         ];
 
-        function initializeElements() {
-            elements.albumList = document.querySelector('.album-list');
-            elements.filterContainer = document.querySelector('.filter-container');
-            elements.ratingInfoTrigger = document.getElementById('ratingInfoTrigger');
-        }
-
         function initializeAlbumData() {
             if (!elements.albumList) return;
-
-            albumData = Array.from(elements.albumList.querySelectorAll('li')).map(element => {
-                const genreElement = element.querySelector('.genre');
-                const genreText = genreElement ? genreElement.textContent.toLowerCase() : '';
-                const genreArray = genreText
-                    ? genreText.split('/').map(g => g.trim()).filter(g => g)
-                    : [];
-
+            albumData.push(...Array.from(elements.albumList.querySelectorAll('li'), element => {
+                const genreText = element.querySelector('.genre')?.textContent.toLowerCase() || '';
                 return {
                     element,
-                    genreText,
-                    genreArray
+                    genreArray: genreText ? genreText.split('/').map(g => g.trim()).filter(Boolean) : []
                 };
-            });
+            }));
         }
 
         function getContrastColor(hexColor) {
-            const hex = hexColor.replace('#', '');
+            const hex = hexColor.slice(1);
             const r = parseInt(hex.substr(0, 2), 16);
             const g = parseInt(hex.substr(2, 2), 16);
             const b = parseInt(hex.substr(4, 2), 16);
-            const yiq = (r * 299 + g * 587 + b * 114) / 1000;
-            return yiq >= 128 ? '#161616' : '#ededed';
+            return (r * 299 + g * 587 + b * 114) / 1000 >= 128 ? '#161616' : '#ededed';
         }
 
         function extractGenres() {
             const genreCounts = new Map();
 
-            albumData.forEach(({ genreArray }) => {
-                genreArray.forEach(genre => {
+            albumData.flatMap(({ genreArray }) => genreArray)
+                .forEach(genre => {
                     const lowerGenre = genre.toLowerCase();
-                    if (!genreCounts.has(lowerGenre)) {
-                        genreCounts.set(lowerGenre, { count: 0, originalCase: genre });
-                    }
-                    const genreData = genreCounts.get(lowerGenre);
-                    genreData.count++;
-                    if (genre.length < genreData.originalCase.length) {
-                        genreData.originalCase = genre;
+                    const existing = genreCounts.get(lowerGenre);
+
+                    if (existing) {
+                        existing.count++;
+                        if (genre.length < existing.originalCase.length) {
+                            existing.originalCase = genre;
+                        }
+                    } else {
+                        genreCounts.set(lowerGenre, { count: 1, originalCase: genre });
                     }
                 });
-            });
 
-            return Array.from(genreCounts.entries())
-                .map(([lowerName, { count, originalCase }]) => ({
-                    name: originalCase,
-                    lowerName,
-                    count
-                }))
-                .sort((a, b) => b.count - a.count || a.name.localeCompare(b.name));
+            return Array.from(genreCounts.entries(), ([lowerName, { count, originalCase }]) => ({
+                name: originalCase,
+                lowerName,
+                count
+            })).sort((a, b) => b.count - a.count || a.name.localeCompare(b.name));
         }
 
         function createGenreLabel(genre, index) {
             const label = document.createElement('span');
-            label.className = 'genre-label';
-            label.textContent = `${genre.name} (${genre.count})`;
-            label.setAttribute('data-genre', genre.lowerName);
-
             const color = genreColors[index % genreColors.length];
-            label.style.backgroundColor = color;
-            label.style.color = getContrastColor(color);
 
+            Object.assign(label, {
+                className: 'genre-label',
+                textContent: `${genre.name} (${genre.count})`
+            });
+
+            label.setAttribute('data-genre', genre.lowerName);
+            Object.assign(label.style, {
+                backgroundColor: color,
+                color: getContrastColor(color)
+            });
+
+            genreLabelElements.set(genre.lowerName, label);
             return label;
         }
 
@@ -439,38 +435,44 @@
             container.className = 'genre-labels-container';
 
             container.addEventListener('click', (e) => {
-                if (e.target.classList.contains('genre-label')) {
-                    const genreName = e.target.getAttribute('data-genre');
-                    currentActiveGenreFilter = currentActiveGenreFilter === genreName ? '' : genreName;
-                    filterByGenre();
+                const label = e.target.closest('.genre-label');
+                if (!label) return;
+
+                const genreName = label.getAttribute('data-genre');
+                if (activeGenreFilters.has(genreName)) {
+                    activeGenreFilters.delete(genreName);
+                } else {
+                    activeGenreFilters.add(genreName);
                 }
+                filterByGenre();
             });
 
+            const fragment = document.createDocumentFragment();
             genres.forEach((genre, index) => {
-                container.appendChild(createGenreLabel(genre, index));
+                fragment.appendChild(createGenreLabel(genre, index));
             });
+            container.appendChild(fragment);
 
             elements.filterContainer.parentNode.insertBefore(container, elements.albumList);
         }
 
         function filterByGenre() {
-            const activeClass = 'active';
+            for (const [genreName, label] of genreLabelElements) {
+                label.classList.toggle('active', activeGenreFilters.has(genreName));
+            }
 
-            document.querySelectorAll('.genre-label').forEach(label => {
-                const genreName = label.getAttribute('data-genre');
-                label.classList.toggle(activeClass, genreName === currentActiveGenreFilter);
-            });
+            const hasActiveFilters = activeGenreFilters.size > 0;
 
-            albumData.forEach(({ element, genreArray }) => {
-                const shouldShow = !currentActiveGenreFilter || genreArray.includes(currentActiveGenreFilter);
+            for (const { element, genreArray } of albumData) {
+                const shouldShow = !hasActiveFilters || genreArray.some(genre => activeGenreFilters.has(genre));
                 element.style.display = shouldShow ? 'flex' : 'none';
-            });
+            }
         }
 
         function setupYouTubeLinks() {
             document.querySelectorAll('a.YT').forEach(link => {
-                link.setAttribute('target', '_blank');
-                link.setAttribute('rel', 'noopener');
+                link.target = '_blank';
+                link.rel = 'noopener';
             });
         }
 
@@ -481,11 +483,10 @@
                 if (!elements.ratingInfoTrigger.contains(e.target)) {
                     elements.ratingInfoTrigger.blur();
                 }
-            });
+            }, { passive: true });
         }
 
         function init() {
-            initializeElements();
             initializeAlbumData();
             setupGenreLabels();
             filterByGenre();
@@ -493,7 +494,11 @@
             setupTooltipBehavior();
         }
 
-        init();
+        if (document.readyState === 'loading') {
+            document.addEventListener('DOMContentLoaded', init);
+        } else {
+            init();
+        }
     </script>
 </body>
 
