--- a/template.html
+++ b/template.html
@@ -211,7 +211,7 @@
             <!--PLACEHOLDER_ALBUM_LIST-->
         </ol>
         <div class="chart-container">
-            <h2 style="margin-bottom: 15px;">Genre Count Analysis (5+ Appearances)</h2>
+            <h2 style="margin-top: 30px;">Genre Count Analysis (5+ Appearances)</h2>
             <canvas id="genreChart"></canvas>
         </div>
     </div>
