--- a/template.html
+++ b/template.html
@@ -9,6 +9,7 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Album Ratings</title>
     <style>
         html {
