--- a/template.html
+++ b/template.html
@@ -19,15 +19,13 @@
         body {
             color: #E2E8F0;
             background: #2D3748;
-            max-width: 640px;
-            width: 100%;
+            width: 640px;
             margin: 1rem auto;
             padding: 0 5px;
             font-family: "Source Sans 3", sans-serif;
             border-radius: 32px;
             border: 1px solid rgba(226, 232, 240, 0.1);
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
-            box-sizing: border-box;
         }
 
         .container {
@@ -186,43 +184,6 @@
             border-radius: 10px;
             max-width: 620px;
             text-align: center;
-        }
-
-        @media (max-width: 650px) {
-            html {
-                background-color: #2D3748;
-            }
-
-            body {
-                margin: 0;
-                border-radius: 0;
-                border: none;
-                box-shadow: none;
-            }
-
-            .album-list li {
-                padding: 8px 10px 8px 35px;
-                font-size: 0.95rem;
-            }
-
-            .album-list li::before {
-                left: 8px;
-            }
-
-            h2 {
-                font-size: 1.1rem;
-            }
-
-            .rating-tooltip {
-                width: 90vw;
-                max-width: 320px;
-                left: 50%;
-                transform: translateX(-50%);
-            }
-
-            .chart-container {
-                padding: 0 10px 30px 10px;
-            }
         }
     </style>
 </head>
