--- a/template.html
+++ b/template.html
@@ -19,7 +19,7 @@
         body {
             color: #E2E8F0;
             background: #2D3748;
-            width: 645px;
+            width: 666px;
             margin: 1rem auto;
             padding: 0 5px;
             font-family: "Source Sans 3", sans-serif;
@@ -210,7 +210,7 @@
             <!--PLACEHOLDER_ALBUM_LIST-->
         </ol>
         <div class="chart-container">
-            <h2 style="margin-top: 30px;">Genre Count Analysis</h2>
+            <h2 style="margin-top: 30px;">What's The Best Genre?</h2>
             <canvas id="genreChart"></canvas>
         </div>
     </div>
